--- a/UI/blog.html
+++ b/UI/blog.html
@@ -13,7 +13,7 @@
             <p id="logo-name">Mugisha</p>
         </div>
         <ul class="menu">
-            <a href="#homepage"><li>Home</li></a>
+            <a href="index.html"><li>Home</li></a>
             <a href="#ab-skills"><li>About</li></a>
             <a href="#skills"><li>Skills</li></a>
             <a href="#portofolio"><li>Portofolio</li></a>
@@ -23,6 +23,15 @@
     </div>
     <div class="cl-container"></div>
     <div class="bl-container">
+        <div class="mobile-navbar">
+            <div id="mb-logo">
+                <p id="mb-logo-letter">M</p>
+                <p id="mb-logo-name">Mugisha</p>
+            </div>
+            <button class="burgerMenu">
+                <div class="menuBar"></div>
+            </button>
+        </div>
         <div class="article-container">
             <button>
                 <svg width="22" height="15" viewBox="0 0 22 15" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.292893 6.79289C-0.097631 7.18342 -0.097631 7.81658 0.292893 8.20711L6.65685 14.5711C7.04738 14.9616 7.68054 14.9616 8.07107 14.5711C8.46159 14.1805 8.46159 13.5474 8.07107 13.1569L2.41421 7.5L8.07107 1.84315C8.46159 1.45262 8.46159 0.819457 8.07107 0.428933C7.68054 0.0384082 7.04738 0.0384082 6.65685 0.428933L0.292893 6.79289ZM1 8.5H21.597V6.5H1V8.5Z" fill="black"/></svg>
@@ -176,5 +185,6 @@
             </div>
         </div>
     </div>
+    <script src="menu.js" type="text/javascript"></script>
 </body>
 </html>
