--- a/UI/index.html
+++ b/UI/index.html
@@ -23,6 +23,15 @@
             </ul>
         </div>
         <div class="intro-container">
+            <div class="mobile-navbar">
+                <div id="mb-logo">
+                    <p id="mb-logo-letter">M</p>
+                    <p id="mb-logo-name">Mugisha</p>
+                </div>
+                <button class="burgerMenu">
+                    <div class="menuBar"></div>
+                </button>
+            </div>
             <div class="gt-container">
                 <div class="gt-div">
                     <h1 id="gt-header">Hello, I’m <span>Mugisha Fred</span></h1>
@@ -319,5 +328,6 @@
             </div>
         </div>
     </div>
+    <script src="menu.js" type="text/javascript"></script>
 </body>
 </html>
