--- a/UI/login.html
+++ b/UI/login.html
@@ -23,6 +23,15 @@
     </div>
     <div class="cl-container"></div>
     <div class="lg-container">
+        <div class="mobile-navbar">
+            <div id="mb-logo">
+                <p id="mb-logo-letter">M</p>
+                <p id="mb-logo-name">Mugisha</p>
+            </div>
+            <button class="burgerMenu">
+                <div class="menuBar"></div>
+            </button>
+        </div>
         <div class="lt-blog">
             <h1>Looking for your latest article!</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis libero a dui fringilla tincidunt at ac nunc. Fusce feugiat semper risus, non laoreet quam tincidunt nec. Sed auctor nibh ac turpis suscipit, in bibendum magna fermentum. Donec venenatis posuere justo, vel vulputate sem ultricies in. Quisque hendrerit auctor massa, nec dapibus nunc finibus vel.</p>
@@ -60,5 +69,6 @@
         </div>
     </div>
     <script src="login.js" type="text/javascript"></script>
+    <script src="menu.js" type="text/javascript"></script>
 </body>
 </html>
