--- a/UI/add-art.html
+++ b/UI/add-art.html
@@ -40,6 +40,9 @@
                         <p class="email">fmugisha10@gmail.com</p>
                     </div>
                 </div>
+                <button class="burgerMenu">
+                    <div class="menuBar"></div>
+                </button>
             </div>
             <div class="add-art-container">
                 <h1>Create Article</h1>
@@ -128,5 +131,6 @@
         </div>
     </div>
     <script src="add-art.js" type="text/javascript"></script>
+    <script src="menu.js" type="text/javascript"></script>
 </body>
 </html>
