--- a/UI/art.html
+++ b/UI/art.html
@@ -36,11 +36,14 @@
                         <p class="email">fmugisha10@gmail.com</p>
                     </div>
                 </div>
+                <button class="burgerMenu">
+                    <div class="menuBar"></div>
+                </button>
             </div>
             <div class="art-container">
                 <div class="art-title">
                     <h1>Articles</h1>
-                    <button>+ Create Article</button>
+                    <a href="add-art.html" id="add-btn">+ Create Article</a>
                 </div>
                 <div class="tb-container">
                     <table>
@@ -120,5 +123,6 @@
             </div>
         </div>
     </div>
+    <script src="menu.js" type="text/javascript"></script>
 </body>
 </html>
