--- a/UI/dash.html
+++ b/UI/dash.html
@@ -36,6 +36,9 @@
                         <p class="email">fmugisha10@gmail.com</p>
                     </div>
                 </div>
+                <button class="burgerMenu">
+                    <div class="menuBar"></div>
+                </button>
             </div>
             <div class="dash-container">
                 <div class="panel-smry">
@@ -134,5 +137,6 @@
             </div>
         </div>
     </div>
+    <script src="menu.js" type="text/javascript"></script>
 </body>
 </html>
