--- a/UI/profile.html
+++ b/UI/profile.html
@@ -36,6 +36,9 @@
                         <p class="email">fmugisha10@gmail.com</p>
                     </div>
                 </div>
+                <button class="burgerMenu">
+                    <div class="menuBar"></div>
+                </button>
             </div>
             <div class="pro-container">
                 <div class="pro-hdr">
@@ -62,5 +65,6 @@
             </div>
         </div>
     </div>
+    <script src="menu.js" type="text/javascript"></script>
 </body>
 </html>
