--- a/UI/querry.html
+++ b/UI/querry.html
@@ -36,6 +36,9 @@
                         <p class="email">fmugisha10@gmail.com</p>
                     </div>
                 </div>
+                <button class="burgerMenu">
+                    <div class="menuBar"></div>
+                </button>
             </div>
             <div class="qry-container">
                 <h1>Querries/Questions</h1>
@@ -116,5 +119,6 @@
             </div>
         </div>
     </div>
+    <script src="menu.js" type="text/javascript"></script>
 </body>
 </html>
